--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@
                         </svg>
                         <h2 class="top__label">Explore Indonesia</h2>
                     </div>
-                    <a class="nav__link" href="#">destinations</a>
-                    <a class="nav__link" href="#">experiences</a>
-                    <a class="nav__link" href="#">about</a>
-                    <a class="nav__link" href="#">gallery</a>
+                    <div class="top__btn">
+                        <a class="nav__link" href="#">destinations</a>
+                        <a class="nav__link" href="#">experiences</a>
+                        <a class="nav__link" href="#">about</a>
+                        <a class="nav__link" href="#">gallery</a>
+                    </div>
                 </div>
                 <div class="top__search">
                     <a href="#">
@@ -114,7 +116,7 @@
                 </div>
             </div>
             <div class="top__columns">
-                <img class="top__img-col" src="img/Fb In Tw.png" alt="Fb In Tw">
+                <img class="top__img-col" src="img/FbInTw.png" alt="Fb In Tw">
                 <div class="columns__column">
                     <div class="colunm__item">
                         <p class="column__num">01</p>
@@ -142,25 +144,26 @@
                 </div>
             </div>
         </header>
-        <section class="center__box">
-            <article center__info>
+        <div class="center__box">
+            <div class="center__info" >
                 <img src="img/road.png" alt="road">
                 <div class="center__col">
                     <h3 class="center__name">The walkways of Indonesia spellbind</h3>
                     <p class="center__text">Lorem ipsum dolor sit amet, consectetur adip iscing elit. Fusce commodo
                         magna et libero mollis rhoncus. </p>
-                    <a href="#">Learn More</a>
+                    <a class="center__link" href="#">Learn More</a>
                 </div>
-            </article>
-            <article class="center__info-revers">
-                <div class="center__col">
+            </div>
+            <div class="center__info-revers">
+                <img src="img/sea.png" alt="`sea">
+                <div class="center__col-reverse ">
                     <h3 class="center__name">Perfect beaches exude relaxation and fun</h3>
                     <p class="center__text">Lorem ipsum dolor sit amet, consectetur adip iscing elit. Fusce commodo
                         magna et libero mollis rhoncus. </p>
+                        <a class="center__link" href="#">Learn More</a>
                 </div>
-                <img src="img/sea.png" alt="`sea">
-            </article>
-        </section>
+            </div>
+        </div>
     </div>
 </body>
 
