--- a/index.html
+++ b/index.html
@@ -165,10 +165,9 @@
             </div>
         </div>
         <div class="top__slide">
-
             <h2 class="slide__name">Explore Our Secrets</h2>
             <div class="slide__item">
-                
+
                 <div class="slide__img">
                     <button class="btn__left">
                         <svg width="15" height="24" viewBox="0 0 15 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -195,8 +194,28 @@
                     <rect x="110" width="50" height="19" rx="9.5" fill="#DD2242" />
                 </svg>
             </div>
-            
-
+            <div class="slide__numbers">
+                <h2 class="numbers__name">By The Numbers</h2>
+                <p class="numbers__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo magna et
+                    libero.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <div class="slide__info">
+                    <div class="slide__columns">
+                        <h3 class="columns__numb">100+</h3>
+                        <p class="columns__numb-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+                            commodo magna et libero.</p>
+                    </div>
+                    <div class="slide__columns">
+                        <h3 class="columns__numb">43,000+</h3>
+                        <p class="columns__numb-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+                            commodo.</p>
+                    </div>
+                    <div class="slide__columns">
+                        <h3 class="columns__numb">30+</h3>
+                        <p class="columns__numb-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+                            commodo magna et libero.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
