added new block

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     </div>
                 </div>
                 <div class="top__img">
-                    <img src="img/header-sea.png" alt="">
+                    <img class="top__img-play" src="img/header-sea.png" alt="">
                     <a class="top__link-play" href="#">
                         <svg width="45" height="44" viewBox="0 0 45 44" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M15.554 9.16714V34.8338L35.7311 22.0005L15.554 9.16714Z" fill="black" />
@@ -217,6 +217,14 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="aside__info">
+            <h3 class="aside__title">Our hills and valleys are like nothing you’ve seen.</h3>
+            <p class="aside__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sit amet magna commodo, tempus dolor sit amet, laoreet elit. Donec mauris tortor.</p>
+            <div class="aside__btn">
+                <a href="#" class="aside__link">Learn more</a>
+            </div>
+            
         </div>
     </div>
 </body>
