--- a/index.html
+++ b/index.html
@@ -19,23 +19,28 @@
         <header class="header__navi ">
             <nav class="header__link">
                 <div class="top__nav">
-                    <svg width="50" height="49" viewBox="0 0 50 49" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <g clip-path="url(#clip0_12_343)">
-                            <path
-                                d="M36.7829 15.3143V7.65842C36.7829 6.81284 36.0971 6.12726 35.251 6.12726H33.719V1.53375C33.719 0.68816 33.0332 0.0025787 32.187 0.0025787C30.0182 0.0025787 26.6967 -0.163553 22.7976 2.1711C20.3739 1.45001 18.6597 1.53375 16.8674 1.53375C16.0213 1.53375 15.3354 2.21933 15.3354 3.06492V6.12726H13.8035C12.9573 6.12726 12.2715 6.81284 12.2715 7.65842V15.3143C12.2715 21.5501 16.9579 26.7123 22.9952 27.4681V47.4688C22.9952 48.3144 23.6811 49 24.5272 49C25.3733 49 26.0592 48.3144 26.0592 47.4688V42.1097H28.3571C33.0031 42.1097 36.7829 38.3319 36.7829 33.6883V31.3915C36.7829 30.546 36.0971 29.8604 35.251 29.8604H31.4211C29.3859 29.8604 27.517 30.5853 26.0592 31.7903V27.4674C32.0876 26.7212 36.7829 21.5847 36.7829 15.3143ZM33.719 15.3143C33.719 18.0393 32.5133 20.5004 30.6076 22.1879C30.6377 21.9422 30.6551 21.6926 30.6551 21.4389C30.6551 17.5614 29.2047 14.0165 26.8187 11.3159C28.8415 9.93633 31.2399 9.18959 33.719 9.18959V15.3143ZM30.6551 3.06492V6.43617C30.372 6.49378 30.0908 6.55952 29.812 6.63292C28.8182 5.52101 27.6847 4.57369 26.4472 3.8082C27.7848 3.31938 29.2049 3.06492 30.6551 3.06492ZM18.3994 4.59609C21.4429 4.59609 24.3985 5.70685 26.6972 7.82915C25.9385 8.22046 25.2111 8.67665 24.5227 9.1939C22.7415 7.85547 20.6602 6.89562 18.3994 6.43512V4.59609ZM15.3354 15.3143V9.18959C22.0932 9.18959 27.5911 14.6846 27.5911 21.4389C27.5911 23.15 26.1774 24.5443 24.4467 24.4998C19.0647 24.367 15.3354 20.0933 15.3354 15.3143ZM31.4211 32.9227H33.719V33.6883C33.719 36.6433 31.3137 39.0474 28.3571 39.0474H26.0592V38.2818C26.0592 35.3268 28.4646 32.9227 31.4211 32.9227Z"
-                                fill="white" />
-                        </g>
-                        <defs>
-                            <clipPath id="clip0_12_343">
-                                <rect width="49.0255" height="49" fill="white" transform="translate(0.0144043)" />
-                            </clipPath>
-                        </defs>
-                    </svg>
-                    <h2 class="top__label">Explore Indonesia</h2>
-                    <a class="nav__link" href="#">destinations</a>
-                    <a class="nav__link" href="#">experiences</a>
-                    <a class="nav__link" href="#">about</a>
-                    <a class="nav__link" href="#">gallery</a>
+                    <div class="top__icon">
+                        <svg width="50" height="49" viewBox="0 0 50 49" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_12_343)">
+                                <path
+                                    d="M36.7829 15.3143V7.65842C36.7829 6.81284 36.0971 6.12726 35.251 6.12726H33.719V1.53375C33.719 0.68816 33.0332 0.0025787 32.187 0.0025787C30.0182 0.0025787 26.6967 -0.163553 22.7976 2.1711C20.3739 1.45001 18.6597 1.53375 16.8674 1.53375C16.0213 1.53375 15.3354 2.21933 15.3354 3.06492V6.12726H13.8035C12.9573 6.12726 12.2715 6.81284 12.2715 7.65842V15.3143C12.2715 21.5501 16.9579 26.7123 22.9952 27.4681V47.4688C22.9952 48.3144 23.6811 49 24.5272 49C25.3733 49 26.0592 48.3144 26.0592 47.4688V42.1097H28.3571C33.0031 42.1097 36.7829 38.3319 36.7829 33.6883V31.3915C36.7829 30.546 36.0971 29.8604 35.251 29.8604H31.4211C29.3859 29.8604 27.517 30.5853 26.0592 31.7903V27.4674C32.0876 26.7212 36.7829 21.5847 36.7829 15.3143ZM33.719 15.3143C33.719 18.0393 32.5133 20.5004 30.6076 22.1879C30.6377 21.9422 30.6551 21.6926 30.6551 21.4389C30.6551 17.5614 29.2047 14.0165 26.8187 11.3159C28.8415 9.93633 31.2399 9.18959 33.719 9.18959V15.3143ZM30.6551 3.06492V6.43617C30.372 6.49378 30.0908 6.55952 29.812 6.63292C28.8182 5.52101 27.6847 4.57369 26.4472 3.8082C27.7848 3.31938 29.2049 3.06492 30.6551 3.06492ZM18.3994 4.59609C21.4429 4.59609 24.3985 5.70685 26.6972 7.82915C25.9385 8.22046 25.2111 8.67665 24.5227 9.1939C22.7415 7.85547 20.6602 6.89562 18.3994 6.43512V4.59609ZM15.3354 15.3143V9.18959C22.0932 9.18959 27.5911 14.6846 27.5911 21.4389C27.5911 23.15 26.1774 24.5443 24.4467 24.4998C19.0647 24.367 15.3354 20.0933 15.3354 15.3143ZM31.4211 32.9227H33.719V33.6883C33.719 36.6433 31.3137 39.0474 28.3571 39.0474H26.0592V38.2818C26.0592 35.3268 28.4646 32.9227 31.4211 32.9227Z"
+                                    fill="white" />
+                            </g>
+                            <defs>
+                                <clipPath id="clip0_12_343">
+                                    <rect width="49.0255" height="49" fill="white" transform="translate(0.0144043)" />
+                                </clipPath>
+                            </defs>
+                        </svg>
+                        <h2 class="top__label">Explore Indonesia</h2>
+                    </div>
+                    <div class="top__btn">
+                        <a class="nav__link" href="#">destinations</a>
+                        <a class="nav__link" href="#">experiences</a>
+                        <a class="nav__link" href="#">about</a>
+                        <a class="nav__link" href="#">gallery</a>
+
+                    </div>
 
                 </div>
                 <div class="top__search">
@@ -173,9 +178,9 @@
                                 fill="#020B20" />
                         </svg>
                     </button>
-                    <img src="img/Rectangle 1258.png" alt="">
-                    <img src="img/Rectangle 1259.png" alt="">
-                    <img src="img/Rectangle 1260.png" alt="">
+                    <img src="img/Rectangle1258.png" alt="">
+                    <img src="img/Rectangle1259.png" alt="">
+                    <img src="img/Rectangle1260.png" alt="">
                     <button class="btn__rigth">
                         <svg width="15" height="24" viewBox="0 0 15 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" clip-rule="evenodd"
@@ -220,12 +225,136 @@
         </div>
         <div class="aside__info">
             <h3 class="aside__title">Our hills and valleys are like nothing you’ve seen.</h3>
-            <p class="aside__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sit amet magna commodo, tempus dolor sit amet, laoreet elit. Donec mauris tortor.</p>
+            <p class="aside__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sit amet magna
+                commodo, tempus dolor sit amet, laoreet elit. Donec mauris tortor.</p>
             <div class="aside__btn">
                 <a href="#" class="aside__link">Learn more</a>
             </div>
-            
+
         </div>
+        <div class="video__info">
+            <h3 class="video__title">Live a life like you wouldn’t imagine, experience a life you wouldn’t expect.</h3>
+            <div class="video__one">
+                <img class="one__img" src="img/videoMoto.png" alt="">
+                <a class="video__link" href="#">
+                    <svg width="16" height="19" viewBox="0 0 16 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M15.5851 9.83545L0.763672 18.0721C0.592541 18.1688 0.443731 18.1799 0.317243 18.1055C0.198196 18.0311 0.138672 17.8972 0.138672 17.7038V1.27518C0.138672 1.08173 0.198196 0.9478 0.317243 0.873395C0.443731 0.79899 0.592541 0.810151 0.763672 0.906877L15.5851 9.14348C15.7562 9.24021 15.8418 9.35554 15.8418 9.48947C15.8418 9.6234 15.7562 9.73872 15.5851 9.83545Z"
+                            fill="white" />
+                    </svg>
+                </a>
+            </div>
+            <div class="video__columns">
+                <div class="video__columns-row">
+                    <img class="video__img" src="img/videoCountry.png" alt="">
+                    <div class="video__item">
+                        <h4 class="video__columns-name">In The Country</h4>
+                        <p class="video__columns-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Phasellus
+                            dapibus mauris in lectus tempus.</p>
+                    </div>
+                    <a class="video__columns-link" href="#">
+                        <svg width="16" height="18" viewBox="0 0 16 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M15.4994 9.26123C15.8454 9.0715 15.8454 8.759 15.4994 8.56927L0.677963 0.332659C0.331981 0.142926 0.0529633 0.310337 0.0529633 0.700962V17.1295C0.0529633 17.5202 0.331981 17.6876 0.677963 17.4978L15.4994 9.26123Z"
+                                fill="white" />
+                        </svg>
+                    </a>
+
+                </div>
+                <div class="video__columns-row">
+                    <img class="video__img" src="img/videoCity.png" alt="">
+                    <div class="video__item">
+                        <h4 class="video__columns-name">In The City</h4>
+                        <p class="video__columns-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Phasellus
+                            dapibus mauris in..</p>
+                    </div>
+                    <a class="video__columns-link" href="#">
+                        <svg width="16" height="18" viewBox="0 0 16 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M15.4994 9.26123C15.8454 9.0715 15.8454 8.759 15.4994 8.56927L0.677963 0.332659C0.331981 0.142926 0.0529633 0.310337 0.0529633 0.700962V17.1295C0.0529633 17.5202 0.331981 17.6876 0.677963 17.4978L15.4994 9.26123Z"
+                                fill="white" />
+                        </svg>
+
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="gallery__grid">
+            <h2 class="gallery__title">Photo Gallery</h2>
+            <p class="gallery__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dapibus
+                mauris in lectus tempus, eget tincidunt.</p>
+            <div class="gallery__img">
+                <div class="gallery__photo">
+                    <img src="img/g1.png" alt="">
+                    <img src="img/g2.png" alt="">
+                </div>
+                <div class="gallery__photo">
+                    <img src="img/g3.png" alt="">
+                    <img src="img/g4.png" alt="">
+                </div>
+                <div class="gallery__photo">
+                    <img src="img/g5.png" alt="">
+                    <img src="img/g6.png" alt="">
+                </div>
+            </div>
+        </div>
+
+
+
+        
+        <footer class="footer__item">
+            <div class="footer__nav">
+                <div class="footer__icon">
+                    <svg width="51" height="51" viewBox="0 0 51 51" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g clip-path="url(#clip0_12_354)">
+                            <path
+                                d="M38.2494 15.9393V7.97101C38.2494 7.09091 37.5359 6.37735 36.6557 6.37735H35.0621V1.59635C35.0621 0.716248 34.3486 0.00268395 33.4684 0.00268395C31.2122 0.00268395 27.7569 -0.170229 23.7008 2.25971C21.1794 1.5092 19.3962 1.59635 17.5317 1.59635C16.6515 1.59635 15.9381 2.30991 15.9381 3.19002V6.37735H14.3444C13.4642 6.37735 12.7507 7.09091 12.7507 7.97101V15.9393C12.7507 22.4297 17.6259 27.8026 23.9064 28.5893V49.4063C23.9064 50.2864 24.6199 51 25.5001 51C26.3803 51 27.0937 50.2864 27.0937 49.4063V43.8285H29.4842C34.3173 43.8285 38.2494 39.8964 38.2494 35.0633V32.6728C38.2494 31.7927 37.5359 31.0792 36.6557 31.0792H32.6716C30.5545 31.0792 28.6103 31.8337 27.0937 33.0879V28.5885C33.3649 27.8119 38.2494 22.4657 38.2494 15.9393ZM35.0621 15.9393C35.0621 18.7756 33.8077 21.3372 31.8253 23.0935C31.8566 22.8378 31.8747 22.5781 31.8747 22.314C31.8747 18.2781 30.3659 14.5886 27.8838 11.7778C29.9881 10.3419 32.4831 9.56468 35.0621 9.56468V15.9393ZM31.8747 3.19002V6.69887C31.5802 6.75883 31.2878 6.82726 30.9977 6.90366C29.9638 5.74636 28.7847 4.76037 27.4973 3.96364C28.8889 3.45486 30.3661 3.19002 31.8747 3.19002ZM19.1254 4.78368C22.2915 4.78368 25.3662 5.93979 27.7574 8.14871C26.9682 8.55599 26.2115 9.0308 25.4954 9.56916C23.6424 8.1761 21.4773 7.17707 19.1254 6.69777V4.78368ZM15.9381 15.9393V9.56468C22.968 9.56468 28.6874 15.2839 28.6874 22.314C28.6874 24.0949 27.2167 25.5461 25.4163 25.4998C19.8175 25.3616 15.9381 20.9135 15.9381 15.9393ZM32.6716 34.2665H35.0621V35.0633C35.0621 38.1389 32.5599 40.6412 29.4842 40.6412H27.0937V39.8443C27.0937 36.7688 29.596 34.2665 32.6716 34.2665Z"
+                                fill="white" />
+                        </g>
+                        <defs>
+                            <clipPath id="clip0_12_354">
+                                <rect width="51" height="51" fill="white" />
+                            </clipPath>
+                        </defs>
+                    </svg>
+                    <h2 class="footer__name"><span class="footer__red">Explore</span>
+                        Indonesia</h2>
+                </div>
+                <div class="footer__btn">
+                    <a class="footer__link" href="#">About</a>
+                    <a class="footer__link" href="#">Pricing</a>
+                    <a class="footer__link" href="#">Company</a>
+                    <a class="footer__link" href="#">Blog</a>
+                </div>
+
+            </div>
+            <div class="footer__logo">
+                <a href="#">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M13.457 19V12.25H15.643L16 9.25H13.457V7.789C13.457 7.0165 13.4781 6.25 14.6295 6.25H15.7958V4.105C15.7958 4.07275 14.794 4 13.7805 4C11.664 4 10.3387 5.24275 10.3387 7.525V9.25H8V12.25H10.3387V19H13.457Z"
+                            fill="white" />
+                    </svg>
+                </a>
+                <a href="#">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M20 19H16.9231V13.3967C16.9231 11.8596 16.2715 11.0022 15.1031 11.0022C13.8315 11.0022 13.0769 11.8956 13.0769 13.3967V19H10V8.59243H13.0769V9.76288C13.0769 9.76288 14.0423 8 16.2177 8C18.3938 8 20 9.3818 20 12.2415C20 15.1004 20 19 20 19ZM5.50031 6C4.67151 6 4 5.32819 4 4.4997C4 3.67181 4.67151 3 5.50031 3C6.32849 3 7 3.67181 7 4.4997C7.00061 5.32819 6.32849 6 5.50031 6ZM4 19H7V9H4V19Z"
+                            fill="white" />
+                    </svg>
+                </a>
+                <a href="#">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M18.8751 10.6027H12.1479C12.1479 11.3023 12.1479 12.7015 12.1436 13.4011H16.0418C15.8925 14.1007 15.3628 15.0802 14.6145 15.5734C14.6138 15.5727 14.6131 15.5776 14.6116 15.5769C13.6167 16.2338 12.3037 16.3829 11.3288 16.187C9.80069 15.8833 8.59134 14.7752 8.10032 13.3675C8.10317 13.3654 8.10532 13.3459 8.10746 13.3445C7.80012 12.4714 7.80012 11.3023 8.10746 10.6027H8.10675C8.50272 9.31683 9.74851 8.14359 11.2788 7.82247C12.5096 7.56152 13.8983 7.84416 14.9197 8.79982C15.0555 8.6669 16.7995 6.96405 16.9303 6.82553C13.4409 3.66541 7.85373 4.77708 5.7631 8.85789H5.76239C5.76239 8.85789 5.7631 8.85789 5.75882 8.86558C4.72458 10.87 4.76747 13.2318 5.76596 15.1404C5.7631 15.1425 5.76096 15.1438 5.75882 15.1459C6.66368 16.902 8.31045 18.2487 10.2946 18.7615C12.4024 19.3142 15.0848 18.9364 16.8817 17.3112C16.8824 17.3119 16.8831 17.3126 16.8838 17.3133C18.4062 15.9421 19.354 13.6061 18.8751 10.6027Z"
+                            fill="white" />
+                    </svg>
+                </a>
+                <p class="footer__text">Copyright © 2019</p>
+            </div>
+        </footer>
     </div>
 </body>
 
