added style in new block

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                 </div>
             </div>
         </div>
-        <div class="gallery__grid">
+        <div class="gallery__grid center">
             <h2 class="gallery__title">Photo Gallery</h2>
             <p class="gallery__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dapibus
                 mauris in lectus tempus, eget tincidunt.</p>
@@ -300,10 +300,65 @@
                 </div>
             </div>
         </div>
+        <div class="section__item center">
+            <h2 class="section__name">Getting there</h2>
+            <div class="section__box">
+                <div class="section__info">
+                    <p class="section__number">1</p>
+                    <div class="section__info-items">
+                        <h4 class="section__title">Bookings your flights</h4>
+                        <p class="section__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
+                            dapibus
+                            mauris in lectus tempus, eget tincidunt lacus varius. Sed euismod orci dictum faucibus
+                            malesuada. Praesent sed eros tincidunt, viverra neque auctor, lobortis enim.</p>
+                    </div>
+                </div>
+                <div class="section__info">
+                    <div class="section__number">2</div>
+                    <div class="section__info-items">
+                        <h4 class="section__title">Choosing your hotel</h4>
+                        <p class="section__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
+                            dapibus
+                            mauris in lectus tempus, eget tincidunt lacus varius. Sed euismod orci dictum faucibus
+                            malesuada. Praesent sed eros tincidunt, viverra neque auctor, lobortis enim.</p>
+                    </div>
+
+                    <div class="section__columns">
+                        <img class="section__colomns-img" src="img/sect.png" alt="">
+                        <div class="section__columns-item">
+                            <h4 class="section__title-columns">Travelling there</h4>
+                            <p class="section__columns-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                Phasellus dapibus mauris in lectus tempus, eget tincidunt.</p>
+                        </div>
+                        <a class="section__columns-link" href="#">
+                            <svg width="17" height="18" viewBox="0 0 17 18" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M15.9311 9.06641L1.10969 17.303C0.938557 17.3997 0.789747 17.4109 0.663259 17.3365C0.544212 17.2621 0.484688 17.1282 0.484688 16.9347V0.506137C0.484688 0.312685 0.544212 0.178757 0.663259 0.104352C0.789747 0.0299471 0.938557 0.0411079 1.10969 0.137834L15.9311 8.37444C16.1022 8.47117 16.1878 8.5865 16.1878 8.72042C16.1878 8.85435 16.1022 8.96968 15.9311 9.06641Z"
+                                    fill="white" />
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+                <div class="section__info">
+                    <div class="section__number">3</div>
+                    <div class="section__info-items">
+                        <h4 class="section__title">Planning your experiences</h4>
+                        <p class="section__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
+                            dapibus
+                            mauris in lectus tempus, eget tincidunt lacus varius.</p>
+                            <a class="section__link" href="#">Learn More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
 
-        
+
+
+
+
         <footer class="footer__item">
             <div class="footer__nav">
                 <div class="footer__icon">
@@ -331,21 +386,21 @@
 
             </div>
             <div class="footer__logo">
-                <a href="#">
+                <a class="footer__logo-link" href="#">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd"
                             d="M13.457 19V12.25H15.643L16 9.25H13.457V7.789C13.457 7.0165 13.4781 6.25 14.6295 6.25H15.7958V4.105C15.7958 4.07275 14.794 4 13.7805 4C11.664 4 10.3387 5.24275 10.3387 7.525V9.25H8V12.25H10.3387V19H13.457Z"
                             fill="white" />
                     </svg>
                 </a>
-                <a href="#">
+                <a class="footer__logo-link" href="#">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd"
                             d="M20 19H16.9231V13.3967C16.9231 11.8596 16.2715 11.0022 15.1031 11.0022C13.8315 11.0022 13.0769 11.8956 13.0769 13.3967V19H10V8.59243H13.0769V9.76288C13.0769 9.76288 14.0423 8 16.2177 8C18.3938 8 20 9.3818 20 12.2415C20 15.1004 20 19 20 19ZM5.50031 6C4.67151 6 4 5.32819 4 4.4997C4 3.67181 4.67151 3 5.50031 3C6.32849 3 7 3.67181 7 4.4997C7.00061 5.32819 6.32849 6 5.50031 6ZM4 19H7V9H4V19Z"
                             fill="white" />
                     </svg>
                 </a>
-                <a href="#">
+                <a class="footer__logo-link" href="#">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd"
                             d="M18.8751 10.6027H12.1479C12.1479 11.3023 12.1479 12.7015 12.1436 13.4011H16.0418C15.8925 14.1007 15.3628 15.0802 14.6145 15.5734C14.6138 15.5727 14.6131 15.5776 14.6116 15.5769C13.6167 16.2338 12.3037 16.3829 11.3288 16.187C9.80069 15.8833 8.59134 14.7752 8.10032 13.3675C8.10317 13.3654 8.10532 13.3459 8.10746 13.3445C7.80012 12.4714 7.80012 11.3023 8.10746 10.6027H8.10675C8.50272 9.31683 9.74851 8.14359 11.2788 7.82247C12.5096 7.56152 13.8983 7.84416 14.9197 8.79982C15.0555 8.6669 16.7995 6.96405 16.9303 6.82553C13.4409 3.66541 7.85373 4.77708 5.7631 8.85789H5.76239C5.76239 8.85789 5.7631 8.85789 5.75882 8.86558C4.72458 10.87 4.76747 13.2318 5.76596 15.1404C5.7631 15.1425 5.76096 15.1438 5.75882 15.1459C6.66368 16.902 8.31045 18.2487 10.2946 18.7615C12.4024 19.3142 15.0848 18.9364 16.8817 17.3112C16.8824 17.3119 16.8831 17.3126 16.8838 17.3133C18.4062 15.9421 19.354 13.6061 18.8751 10.6027Z"
@@ -353,6 +408,29 @@
                     </svg>
                 </a>
                 <p class="footer__text">Copyright © 2019</p>
+                <a class="footer__arrow-link" href="#">
+                    <svg width="124" height="124" viewBox="0 0 124 124" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g filter="url(#filter0_d_26_150)">
+                            <circle cx="62" cy="55" r="52" fill="#DD2242" />
+                        </g>
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M80.292 60.6276C81.3222 61.6577 81.3222 63.328 80.292 64.3581C79.2618 65.3883 77.5916 65.3883 76.5614 64.3581L62.1386 49.9353L47.5032 64.5707C46.473 65.6008 44.8028 65.6008 43.7726 64.5707C42.7425 63.5405 42.7425 61.8703 43.7726 60.8401L59.6276 44.9852C60.1526 44.4601 60.8439 44.2027 61.532 44.2128C62.4942 43.8006 63.6516 43.9872 64.437 44.7726L80.292 60.6276Z"
+                            fill="white" />
+                        <defs>
+                            <filter id="filter0_d_26_150" x="0" y="0" width="124" height="124" filterUnits="userSpaceOnUse"
+                                color-interpolation-filters="sRGB">
+                                <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                                <feColorMatrix in="SourceAlpha" type="matrix"
+                                    values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
+                                <feOffset dy="7" />
+                                <feGaussianBlur stdDeviation="5" />
+                                <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.2 0" />
+                                <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_26_150" />
+                                <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_26_150" result="shape" />
+                            </filter>
+                        </defs>
+                    </svg>
+                </a>
             </div>
         </footer>
     </div>
